# gnucobol-contrib

./: README  README.md  run_cobol.sh
BPEdit-simple/: .pydevproject  create_exe.bat
BPEdit-simple/Utils/: StringUtils.py
at_test_win/: 1c.sed  2c.sed  listings-sed-c.cmd  tests.cmd  wintest.properties  wintest_skip.properties
at_test_win/wintest/: comp.cmd
db/: rep-cache.db  uuid
esql/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
esql/build_aux/: ChangeLog
esql/build_windows/: config.h  gnucobol-sql-vs2005-2008.sln  gnucobol-sql.sln  version_esqlOC.rc  version_ocsql.rc
esql/build_windows/esqlOC/: esqlOC.vcproj  esqlOC.vcxproj  esqlOC.vcxproj.filters
esql/build_windows/ocsql/: ocsql.vcproj  ocsql.vcxproj  ocsql.vcxproj.filters
esql/esqlOC/: ChangeLog  Makefile.am  Makefile.in  esqlOC.cpp  vcache.cpp  vcache.h
esql/ocsql/: ChangeLog  Makefile.am  Makefile.in  ocsql2.cpp  ocsql390.cpp
ipc/CBL_GC_SOCKET/: README.txt  build.sh  documentation_de.odt
ipc/CBL_OC_SOCKET/: README.txt  build.sh  cob_socket.cpp  cob_socket.h  documentation_de.odt  documentation_en.odt
ocsort-smenna/: ChangeLog  INSTALL  Makefile  OCSort_Command_Example_01.Txt  README  THANKS  TODO  bufferedreader.c  bufferedreader.h  bufferedwriter.c  bufferedwriter.h  condfield.c  condfield.h  fieldvalue.c  fieldvalue.h  file.c  file.h  inrec.c  inrec.h  job.c  job.h  keyidxrel.c  keyidxrel.h  libocsort.h  mmfioc.c  mmfioc.h  ocsort.c  ocsort.depend  ocsort.h  ocsort.layout  ocsort_command_example_01.txt  ocsorthelp.c  outfil.c  outfil.h  outrec.c  outrec.h  parser.c  parser.h  parser.y  scanner.c  (+8 more)
ocsort-smenna/build_linux/: Makefile  compile.sh
ocsort-smenna/build_windows/: README.txt  build_info.txt
ocsort-smenna/libcob/: call.h  common.h  libcob.h  mpirxx.h
ocsort-smenna/ocsort_gentestcase/: ChangeLog  INSTALL  Makefile  README  THANKS  _compile.sh  compile.sh  gencfg.c  gencfg.h  gencob4check.c  gencob4check.h  gencob4sort.c  gencob4sort.h  genrows.hpp  genscript.c  genscript.h  gentestcase.c  ocsort_gentestcase.c  ocsort_gentestcase.h
ocsort-smenna/tests/: README
samples/: README  RESTclient1  changeformat  changeformat1  compileallfixed  messagepublish1  messagereceive1  messagesend1  tcpipclient1  tcpipserver1
samples/ACAS/: readme
samples/DB2sample/: readme.txt
samples/HTML-CGI-GnuCOBOL/: README.md  cust01.cbl  cust01.cgi  cust01.index.html  cust02.index.html  flat2index1001.cbl  testfile1001.txt
samples/HelloWorld/: Makefile  minimalworld.cob
samples/accept-keys/: ask.cob  readme.txt
samples/altkey/: altkey.cob  readme.txt
samples/asscessSpreadsheetAsXML/: NameAge6.xlsx  NameAge6.xml  README.md  convert-ods.sh  lobatch.bat  processexcelxmlLO.cbl  processexcelxmlMS.cbl
samples/boxdraw/: readme.txt
samples/btc-rate/: btc-rate.cob  makefile  parse-json.cob  readme.txt  system2_cmd.c
samples/c_libraries/: CBL_ZLIB.cob  ChangeLog  README  ZLIBPARAMS.CPY  md5er.cob  md5er.md  sample_ZLIB.cob
samples/cgiform/: cgiform.cob  cgiform.html  cygwin_apache_start.sh  cygwin_apache_stop.sh  makefile  readme.txt
samples/cgiupload/: cgiupload.cob  cygwin_compile.sh  readme.txt  upload1.html  upload2.html  upload3.html  upload4.html  upload5.html  upload6.html  upload7.html  win_compile.bat
samples/cobdes/: cobdes.cob  testdes.cob
samples/cobsha3/: KECCAK.cob  SESSION-ID-256.cob  SESSION-ID.cob  SHA3-224.cob  SHA3-256.cob  SHA3-384.cob  SHA3-512.cob  SHAKE128.cob  SHAKE256.cob  TEST-SESSION-ID-256.cob  TEST-SESSION-ID.cob  TESTSHA3.cob  makefile  readme.txt  win_compile.bat
samples/cookie/: COOKIE-TEST.cob  COOKIE.cob  Makefile  readme.txt
samples/createTestDataFile/: README.md  last.all.txt  testdatafile01.cbl  yobALL.txt  zip.city.state.csv
samples/dasize/: dasize.cob  readme.txt
samples/eliza/: README.txt  eliza.cbl  eliza.lst
samples/imgcaptcha/: Makefile  imgcaptcha-test.cob  readme.txt
samples/imgscale/: Makefile  imgscale-test.cob  imgscale.c  makefile  rainbow_400.tiff  readme.txt
samples/mmap-sequential-indexed/: Linux runtimes for mmap.txt  README.md  Windows runtimes for mmap.txt  createfile1.cbl  createfile2.cbl  flat2index.cbl  indexmatchfile.cbl  mmapjobs.sh  mmapmatchfile.cbl  seqmatchfile.cbl  wmmapjobs.bat  wmmapmatchfile.cbl
samples/prime_machine/: prime_machine.cob  prime_machine2.cob
samples/prothsearch/: Makefile  gmp_fn_calls.c  makefile  prothsearch.cob  prothtest.cob  readme.txt  smallprimes.cpy  win_compile.bat  win_mingw32_compile.bat
samples/raylib_painter/: CobolDraw.cob  particelle.c  readme.txt
samples/shared_mem/: Makefile  mmul.cob  readme.txt  testmmul.cob
samples/socket/: README  RESTclient.cbl  changeformat.cbl  compileall  compileallfree  connecttoserver.cbl  errnomessage.cbl  gettimestamp.cbl  httpstatus.cbl  messagepublish.cbl  messagereceive.cbl  messagesend.cbl  subscriberfile.txt  tcpipclient.cbl  tcpipserver.cbl
samples/system2/: makefile  readme.txt  testsys2.cob
samples/week-day/: README  week-day-85.cob  week-day.cob
samples/win-beep/: makefile  readme.txt  tstwbeep.cob  tstwinbeep.cob  win_beep.c  winbeep.cob
samples/win-sound/: makefile  readme.txt  tstwinsound.cob  tstwsound.cob  win_sound.c  winsound.cob
samples/worldcities/: Davenport.kml  Detroit.kml  LosAngeles.kml  NewYork.kml  Paris.kml  README  README.ocamlpro  Vienna.kml  all.sh  checkfilestatus.cpy  city-record.cpy  commonroutines.cbl  country-record.cpy  createcommandfiles.sh  printrunreport.cbl  sqlca.cbl  worldcities0.cbl  worldcities0.sh  worldcities1.cbl  worldcities1.sh  worldcities2.cbl  worldcities2.sh  worldcities3.cbl  worldcities3.sh  worldcities4.cbl  worldcities4.sh  worldcities5.cbl  worldcities5.sh  worldcities6.cbl  worldcities6.sh  worldcities7.cbl  worldcities7.sh  worldcities8.cbl  worldcities8.sh
tools/: MYSQL-VARIABLES.CPY  README  cobmysqlapi.005.c  mysql-variables.cpy  preo.cbl  presql.sh  prompt_v23_cobol_expert.md  prtschema.scb  prtschema.sh  test1.cbl  test1.sh
tools/ACAS/: comp-stockLD.sh  mysql-procedures.cpy  (+2 more)
(+2294 files in other folders)
