#
# Makefile gnu-cobol-sql/esqlOC
#
#
# Copyright (C) 2006-2013 Sergey Kashyrin <ska@kiska.net>
#               2012 enhanced by Doug Vogel <dv11674@gmail.com>
#               2013 fixes and enhancements by Atilla Akarsular <030ati@gmail.com>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this software; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 59 Temple Place, Suite 330,
# Boston, MA 02111-1307 USA
#

bin_PROGRAMS = esqlOC
esqlOC_SOURCES = esqlOC.cpp vcache.cpp vcache.h
esqlOC_CFLAGS = -I$(top_srcdir)
